CMF 2.2.0-beta (unreleased)

  New Features

    - CMFCore.exportimport.skins: Added the ability to remove whole skin
      selections using a GS profile.
      (http://www.zope.org/Collectors/CMF/479)

  Others

    - interfaces: Removed deprecated oldstyle interfaces.

    - CMFCore.MembershipTool: Removed ancient LoginManager compatibility code
      and deprecated the no longer needed __getPUS method.
    

CMF 2.1.x

  For a complete list see CHANGES.txt of the 2.1 branch.

CMF 2.0.x and earlier

  For a complete list of changes see HISTORY.txt.