@@ -8,6 +8,11 @@ CMF 2.2.0-beta (unreleased)
 
   Others
 
+    - CMFUid: Removed redundant and unexpected code to auto-create catalog
+      index and column for the UID handler tool. The index and column are
+      already created by the default CMFUid GenericSetup profile.
+      (http://www.zope.org/Collectors/CMF/472)
+
     - interfaces: Removed deprecated oldstyle interfaces.
 
     - CMFCore.MembershipTool: Removed ancient LoginManager compatibility code
